# BCG_churn_prediction

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: Home.py
app/utils/: data_processing_st.py
classes/: model.py  preprocessor.py
inputs/: toy_input.csv
