[tool.poetry]
name = "27- bcg gamma"
version = "0.1.0"
description = "BCG Hackathon"
authors = ["youssefjouini1 <mohamed-youssef.jouini@polytechnique.edu>"]
readme = "README.md"
packages = [{include = "27"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
